--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppDbContext": "Server=MICHAL\\SQLEXPRESS;Database=Profisys;Trusted_Connection=True"
   }
 }
