--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppDbContext": "Server=MICHAL\\SQLEXPRESS;Database=Profisys;TrustedConnection=True"
+    "WebAppDbContext": "Server=MICHAL\\SQLEXPRESS;Database=Profisys;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=False;"
   }
 }
