seed działa z pliku csv, rozwiązany problem connection string.

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppDbContext": "Server=MICHAL\\SQLEXPRESS;Database=Profisys;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=False;"
+    "WebAppDbContext": "Server=localhost\\sqlexpress;Database=Profisys;Trusted_Connection=True;TrustServerCertificate=TrueEncrypt=False;EnableRetryOnFailure=True"
   }
 }
