--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppDbContext": "Server=MICHAL\\SQLEXPRESS;Database=Profisys;Trusted_Connection=True"
+    "WebAppDbContext": "Server=localhost\\sqlexpress;Database=Profisys;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
   }
 }
