CSV controller - wyczyszczenie bazy, ponowne wypełnienie bez restartu aplikacji, wstępna wersja endpointu przesyłu plików csv

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\SQL\SQL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
